# napari-whole-brain-map

./: README.md  brainmap_nogui.py  debug.py  setup.cfg
src/napari_whole_brain_map/: _brainmap_widget.py  _writer.py  napari.yaml
src/napari_whole_brain_map.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
