[metadata]
name = napari-whole-brain-map
version = 0.0.1
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    numpy >=1.18
    torch
    qtpy
    nibabel
    multiview-stitcher[aicsimageio] ==0.1.14
    spatial_image ==0.3.0
    multiscale_spatial_image ==0.11.2
include_package_data = True
package_dir =
    =src
    
[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-whole-brain-map = napari_whole_brain_map:napari.yaml

[options.extras_require]
testing_no_gui = # napari and pyqt5 can be installed via conda
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
testing =
    %(testing_no_gui)s
    napari
    pyqt5

[options.package_data]
* = *.yaml
